--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <video src="https://www.apple.com/105/media/us/apple-vision-pro/2023/7e268c13-eb22-493d-a860-f0637bacb569/anim/hero/large_2x.mp4" muted ></video>
             <nav>
                 <h3>Vision Pro</h3>
-                <button>Notify</button>
+                <button>Notify me</button>
             </nav>
             <div id="page-bottom">
                 <h3>Introduction</h3>
